--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1792,13 +1792,13 @@ button.-solid {
   min-width: 170px;
 }
 
-.repo-disable-deactivating {
+.repo-disable-disabling {
   color: var(--color-yellow);
   border: var(--line-width) solid var(--color-yellow);
   min-width: 170px;
 }
 
-.repo-disable-deactivating-text {
+.repo-disable-disabling-text {
   margin-left: 12px;
 }
 
