--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -295,9 +295,9 @@ button {
   */
 
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type='button'],
+[type='reset'],
+[type='submit'] {
   -webkit-appearance: button;
 }
 
@@ -365,8 +365,8 @@ textarea {
   * Remove the padding in IE 10-.
   */
 
-[type="checkbox"],
-[type="radio"] {
+[type='checkbox'],
+[type='radio'] {
   padding: 0;
 }
 
@@ -375,7 +375,7 @@ textarea {
   * 2. Correct the outline style in Safari.
   */
 
-[type="search"] {
+[type='search'] {
   -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
@@ -542,7 +542,7 @@ textarea,
   * Change the cursor on busy elements in all browsers (opinionated).
   */
 
-[aria-busy="true"] {
+[aria-busy='true'] {
   cursor: progress;
 }
 
@@ -559,7 +559,7 @@ textarea,
   * inoperable elements in all browsers (opinionated).
   */
 
-[aria-disabled="true"],
+[aria-disabled='true'],
 [disabled] {
   cursor: not-allowed;
 }
@@ -569,11 +569,11 @@ textarea,
   * in all browsers (opinionated).
   */
 
-[aria-hidden="false"][hidden] {
+[aria-hidden='false'][hidden] {
   display: initial;
 }
 
-[aria-hidden="false"][hidden]:not(:focus) {
+[aria-hidden='false'][hidden]:not(:focus) {
   clip: rect(0, 0, 0, 0);
   position: absolute;
 }
