--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -5,7 +5,9 @@
 @mixin slashes {
   position: absolute;
   right: -0.7rem;
-  color: var(--color-secondary);
+
+  content: "/";
   text-decoration: none;
-  content: '/';
+
+  color: var(--color-secondary);
 }
