--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -40,11 +40,11 @@
   --line-width: 2px;
 
   // system font stack
-  --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-    'Segoe UI Symbol';
+  --font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
 
   // system mono-spaced font stack
-  --font-code: Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New',
+  --font-code: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
     monospace;
 }
