--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -7,43 +7,42 @@
     width: 1em;
   }
 }
-
 @keyframes spin {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
-
 @keyframes build-status-parallax-start {
   from {
     transform: translateX(0%);
   }
+
   to {
     transform: translateX(100%);
   }
 }
-
 @keyframes build-status-parallax-running {
   from {
     transform: translateX(100%);
   }
+
   to {
     transform: translateX(200%);
   }
 }
-
 @keyframes build-particles-source {
   from {
-    width: 12vw;
+    transform: scaleX(1);
   }
+
   to {
-    width: 16vw;
+    transform: scaleX(1.33);
   }
 }
-
 @keyframes bounceInRight {
   from,
   60%,
@@ -77,7 +76,6 @@
     width: 16vw;
   }
 }
-
 @keyframes fadeOutRightBig {
   from {
     opacity: 1;
