--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -33,6 +33,8 @@
   --color-yellow: hsl(48, 100%, 50%); // passes contrast on dark
   --color-yellow-light: hsl(48, 100%, 75%);
 
+  --color-black: hsl(0, 0%, 0);
+  --color-white: hsl(0, 0%, 100%);
   --color-slate: hsla(211.8, 8.8%, 37.8%, 0.5);
 
   // some common attributes
