'fix' remaining issues

--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -4,6 +4,7 @@
 
 @keyframes ellipsis {
   to {
+    // stylelint-disable-next-line
     width: 1em;
   }
 }
@@ -73,6 +74,7 @@
   }
 
   to {
+    // stylelint-disable-next-line
     width: 16vw;
   }
 }
