chore(lint): set up linting (#66)
* chore(lint): set up linting

* run lint:fix

* Revert "run lint:fix"

This reverts commit 5bc0f2632fd9441c454dee468b706fb23ecce342.

* apply lint:fix

* apply lint:fix

* some more tweaks

* add docs

* move stylelint cache

* start of fixes

* 'fix' remaining issues

* tweak prettier

* revert animation classname change

* single quotes for charset

Co-authored-by: Jordan Brockopp <jordan.brockopp@target.com>

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -6,8 +6,8 @@
   position: absolute;
   right: -0.7rem;
 
-  content: "/";
+  color: var(--color-secondary);
   text-decoration: none;
 
-  color: var(--color-secondary);
+  content: '/';
 }
