fixing margin for no step logs

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1214,6 +1214,10 @@ button.-solid {
   }
 }
 
+.no-logs {
+  margin-left: 1.5em;
+}
+
 .step-error {
   color: var(--color-red-light);
   font-size: 14px;
