--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -4,7 +4,7 @@
 
 @mixin slashes {
   position: absolute;
-  right: -0.7rem;
+  right: -1.3ex;
 
   color: var(--color-secondary);
   text-decoration: none;
