--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -10,6 +10,7 @@
 // <button class="button">Ok</button>
 // <button class="button -outline">Ok</button>
 // <button class="button"><svg>..</svg> Ok</button>
+// <a class="button" href="..">Ok</a>
 //
 // <div class="buttons">
 //   <button class="button">Ok</button>
