--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -341,6 +341,11 @@ button,
   line-height: 2em;
 }
 
+.get-started {
+  display: flex;
+  flex-direction: column;
+}
+
 .repo-item {
   position: relative;
 
@@ -522,9 +527,10 @@ button,
   }
 }
 
-.-enabled-container {
+.add-repos-actions {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .repo-enable-btn {
@@ -572,6 +578,13 @@ button,
 
     transition: transform 0.2s ease-in-out;
   }
+}
+
+.add-repos-actions .add-repo-view {
+  min-width: 120px;
+  margin-right: 0.5em;
+
+  text-align: center;
 }
 
 a.-btn {
@@ -636,14 +649,19 @@ button.-inverted {
 
 .nav-buttons {
   display: flex;
+  align-items: center;
 }
 
 .-btn.-hooks {
   margin-right: 0.4em;
 }
 
-.-btn.-overview {
-  margin: 1em 1em 1em 0;
+.add-repos-container {
+  display: flex;
+}
+
+.-btn.-add-repos {
+  line-height: 1.75em;
 }
 
 .-btn.-solid,
@@ -1841,4 +1859,31 @@ button.-btn.-inverted.repo-disable-confirm {
 
     border: var(--line-width) solid var(--color-red);
   }
+}
+
+.star-button {
+  display: inline-block;
+  width: auto;
+  margin: 0 0.5em;
+  padding: 0;
+
+  background: none;
+}
+
+.icon.favorite-star {
+  fill: none;
+  stroke: var(--color-yellow);
+}
+
+.icon.favorite-star.-cursor {
+  cursor: pointer;
+}
+
+.icon.favorite-star.favorited {
+  fill: var(--color-yellow);
+}
+
+.builds-favorite {
+  display: flex;
+  align-items: center;
 }
