add icon example

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -11,6 +11,7 @@
 // <button class="button -outline">Ok</button>
 // <button class="button"><svg>..</svg> Ok</button>
 // <a class="button" href="..">Ok</a>
+// <button class="button -icon"><svg>..</svg></button>
 //
 // <div class="buttons">
 //   <button class="button">Ok</button>
