--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,5 +9,7 @@
 @import 'mixins';
 @import 'animations';
 @import 'buttons';
+@import 'forms';
+@import 'settings';
 @import 'main';
 @import 'themes';
