general utility class for notices

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1244,3 +1244,12 @@ nav {
   display: flex;
   align-items: center;
 }
+
+// general utility class for callouts
+.notice {
+  padding: 1rem;
+
+  font-size: 1rem;
+
+  background: var(--color-bg-light);
+}
