--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -114,4 +114,11 @@ body.theme-light {
 
     caret-color: var(--color-text);
   }
+
+  // stylelint-disable-next-line
+  .form-control input:invalid:not([type='checkbox']):not([type='radio']) {
+    color: var(--color-red-dark);
+
+    border-color: var(--color-red);
+  }
 }
