--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -6,7 +6,7 @@
 // used mostly for separating links and breadcrumbs
 @mixin slashes {
   position: absolute;
-  right: -1.3ex;
+  right: -1.1ch;
 
   color: var(--color-secondary);
   text-decoration: none;
